testsuite/tests/module/mod152.hs
-- !!! ambiguous re-exportation.
module M (module Prelude,id) where id x = x;
